<resources>
    <string name="app_name">nventry</string>
    <string name="hello_world">Hello, world!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nventry_text">nventry</string>
    <string name="lorem_ipsum_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas gravida velit nec feugiat. Sed pharetra semper elementum.</string>
    <string name="skip_text">Skip</string>
    <string name="next_text">Next</string>
    <string name="get_started_text">Get Started</string>
    <string name="back_text">Back</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_back_text_sub">Login to continue from where you left off</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_text">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="welcome_text">Welcome to nventry</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="signup_text">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="business_name_text">Business Name</string>
    <string name="businesses_text">Businesses</string>
    <string name="profile_text">Profile</string>
    <string name="your_businesses">Your Businesses</string>
    <string name="empty_screen_text_txt">This place looks empty, create a business to get started</string>
    <string name="empty_screen_text_txt_product">This place looks empty, create a product to get started</string>
    <string name="please_provide_the_details_of_your_business">Please, provide the details of your business</string>
    <string name="please_provide_the_updated_details_of_your_business">Please, provide the new details of your business</string>
    <string name="business_description_hint">Business Description</string>
    <string name="add_business_text">Add Business</string>
    <string name="edit_business_text">Edit Business</string>
    <string name="upload_image_text">Upload Image</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="save_text">Save</string>
    <string name="products_text">Products</string>
    <string name="share_text">Share</string>
    <string name="partners_text">Partners</string>
    <string name="settings_text">Settings</string>
    <string name="your_products">Your Products</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_sharing_text">Product Sharing Text</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price_text">AED %s</string>
    <string name="edit_product_text">Edit</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_product">Update Product</string>
    <string name="share_product_text">Share</string>
    <string name="_15">15</string>
    <string name="description_text">Description</string>
    <string name="lorem_10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie elementum tellus, sed tristique quam.</string>
    <string name="sharing_text">Sharing Promo</string>
    <string name="web_link_text">Web Link</string>
    <string name="copy">Copy</string>
    <string name="recently_shared_products_text">Recently Shared Products</string>
    <string name="blender">BLENDER</string>
    <string name="today_20_05pm">Today, 20:05PM</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_partners">Your Partners</string>
</resources>