<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.olaore.nventry.ui.viewmodels.SignupViewModel" />
        <import type="dev.olaore.nventry.models.domain.FormErrors"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SignupFragment">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_to_get_started"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            errorText='@{ viewModel.formErrors.contains(FormErrors.MISSING_NAME) ? "Username is required" : "" }'
            app:layout_constraintTop_toBottomOf="@id/welcome_text_sub">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={ viewModel.username }"
                android:hint="@string/username_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            errorText='@{ viewModel.formErrors.contains(FormErrors.INVALID_EMAIL) ? "Email address is invalid" : "" }'
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:text="@={ viewModel.email }"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            errorText='@{ viewModel.formErrors.contains(FormErrors.INVALID_PASSWORD) ? "Minimum of 8 characters are required for password" : "" }'
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={ viewModel.password }"
                android:hint="@string/password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:enabled="@{ viewModel.enabled }"
            android:layout_marginEnd="20dp"
            android:text="@string/signup_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <TextView
            android:id="@+id/already_have_an_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/signup_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>