<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.olaore.nventry.ui.viewmodels.LoginViewModel" />
        <variable
            name="isLoading"
            type="Boolean" />

        <import type="dev.olaore.nventry.models.domain.FormErrors" />
        <import type="android.view.View" alias="V"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.LoginFragment">

        <TextView
            android:id="@+id/welcome_back_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_back_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back_text_sub"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/welcome_back_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            errorText='@{ viewModel.formErrors.contains(FormErrors.INVALID_EMAIL) ? "Email address is invalid" : "" }'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_back_text_sub">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_hint"
                android:text="@={ viewModel.email }" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            errorText='@{ viewModel.formErrors.contains(FormErrors.INVALID_PASSWORD) ? "Minimum of 8 characters are required for password" : "" }'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={ viewModel.password }" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:enabled="@{ viewModel.enabled }"
            android:text="@string/login_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <ProgressBar
            android:id="@+id/is_loading_progress"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:theme="@style/Theme.Nventry.WhiteAccent"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            android:visibility="@{ isLoading ? V.VISIBLE : V.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".3"
            android:indeterminate="true"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_button" />

        <TextView
            android:id="@+id/dont_have_an_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>