<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="editMode"
            type="Boolean" />

        <variable
            name="viewModel"
            type="dev.olaore.nventry.ui.viewmodels.UpsertProductViewModel" />

        <import
            alias="V"
            type="android.view.View" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.fragments.UpsertProductFragment">

            <TextView
                android:id="@+id/upsert_product_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{ editMode ? @string/edit_product : @string/add_product }"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/medium_font_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/upsert_product_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_name"
                    android:text="@{ viewModel.product.name }" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    displayPlainPrice="@{ viewModel.product.price }"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/product_price">

                <com.google.android.material.textfield.TextInputEditText
                    displayQuantity="@{ viewModel.product.quantity }"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_quantity"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <dev.olaore.nventry.ui.views.UploadImagesContainer
                android:id="@+id/upload_images_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_quantity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/upload_images_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_description"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:text="@{ viewModel.product.description }" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_sharing_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/product_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_sharing_text"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:text="@{ viewModel.product.sharingText }" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/upsert_product_button"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{ editMode ? @string/update_product : @string/add_product }"
                app:layout_constraintTop_toBottomOf="@id/product_sharing_text" />

            <ProgressBar
                android:id="@+id/is_loading_progress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:elevation="4dp"
                android:indeterminate="true"
                android:theme="@style/Theme.Nventry.WhiteAccent"
                android:visibility="@{ isLoading ? V.VISIBLE : V.GONE }"
                app:layout_constraintBottom_toBottomOf="@id/upsert_product_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/upsert_product_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>